--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,7 +1,9 @@
+@import './../../styles/colors';
+
 .footer {
     width: 100%;
     height: 150px;
-    background-color: #6f5499;
+    background-color: $blue-color;
 
     position: absolute;
     bottom: 0;
