--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,7 +1,9 @@
+@import './../../styles/colors';
+
 .header {
     width: 100%;
     height: 100px;
-    background-color: #6f5499;
+    background-color: $blue-color;
 
     .title-container {
         display: flex;
